--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvReport"
         android:layout_width="match_parent"
         android:layout_height="652dp"
