--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -181,6 +181,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="10dp"
+            android:onClick="registerUser"
             android:text="@string/register"
             android:textSize="16sp"
             app:cornerRadius="8dp"
